@@ -65,6 +65,7 @@
 #include <Inventor/fields/SoMFColor.h>
 #include <Inventor/fields/SoSFVec3f.h>
 #include <Inventor/manips/SoTransformerManip.h> 
+#include <Inventor/manips/SoClipPlaneManip.h>
 #include <Inventor/nodes/SoBaseColor.h>
 #include <Inventor/nodes/SoCallback.h> 
 #include <Inventor/nodes/SoComplexity.h>
